--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.17.1",
     "mongoose": "^4.8.5",
     "path": "^0.12.7",
-    "semantic-ui": "^2.2.9"
+    "semantic-ui": "^2.2.9",
+    "tinymce": "^4.5.4"
   }
 }
