--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.16.1",
     "ejs": "^2.5.6",
     "express": "^4.14.1",
+    "express-sanitizer": "^1.0.2",
     "method-override": "^2.3.7",
     "moment": "^2.17.1",
     "mongoose": "^4.8.5",
